<resources>
    <string name="app_name">vpApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="customer_service">Customer Service</string>
    <string name="daftar_agen">Daftar Agen</string>
    <string name="transfer_saldo">Transfer Saldo</string>
    <string name="pengirim_terdaftar">Pengirim Terdaftar</string>
    <string name="kunjungi_website_kami">Kunjungi Website Kami</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="logout">LogOut</string>
</resources>